--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "copy-webpack-plugin": "^4.1.1",
     "webpack": "^3.6.0",
     "webpack-version-file-plugin": "^0.2.3"
+  },
+  "dependencies": {
+    "xregexp": "^3.2.0"
   }
 }
