--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack --config ./webpack/config.js"
+	"dev": "webpack --config ./webpack/config.js",
+	"build": "webpack --config ./webpack/prod.js"
   },
   "author": "Paul Diaz",
   "license": "MIT",
@@ -12,7 +13,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
-    "copy-webpack-plugin": "^4.1.1",
+	"copy-webpack-plugin": "^4.1.1",
+	"crx-webpack-plugin": "^0.1.5",
     "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
