--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^4.1.1",
     "crx-webpack-plugin": "^0.1.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
