--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crx-webpack-plugin": "^0.1.5",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
