--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0.1",
 	"author": "Paul Diaz",
 	"background": {
-		"scripts": ["js/hot-reload.js", "js/background.js"]
+		"scripts": ["js/hotReload.js", "js/background.js"]
 	},
 	"content_scripts": [
 		{
@@ -17,5 +17,6 @@
 			"run_at": "document_start"
 		}
 	],
-	"permissions": ["webNavigation", "tabs", "activeTab", "storage"]
+	"permissions": ["webNavigation", "tabs", "activeTab", "storage"],
+	"options_page": "options.html"
 }
